[build-system]
requires = ["wheel", "scikit-build-core", "numpy>=1.21", "setuptools_scm[toml]>=6.2"]
build-backend = "scikit_build_core.build"

[project]
name = "pycalc11"
dynamic = ["version"]
authors = [
    {name = "Marten H. van Kerkwijk", email = "mhvk@astro.utoronto.ca"},
    {name = "Chenchong Zhu"},
    {name = "Adam E. Lanman", email = "adam.lanman@mcgill.ca"},
]
license = {text = "MIT"}
description = "Python wrappers for CALC11"
urls = {Homepage = "https://github.com/aelanman/pycalc11"}
requires-python = ">=3.8"
dependencies = ["numpy>=1.21", "astropy>=3.2"]

[tool.setuptools_scm]

[project.readme]
file = "README.rst"
content-type = "text/x-rst"

[tool.scikit-build]
ninja.version = ">=1.10"
cmake.version = ">=3.17.2"
metadata.version.provider = "scikit_build_core.metadata.setuptools_scm"
sdist.include = ["pycalc11/_version.py"]


[tool.pytest.ini_options]
testpaths = ['"pycalc11/tests"']

[tool.flake8]
ignore = """
E226,
W503"""
exclude = """
docs/conf.py,
setup.py,
__pycache__,build,dist,htmlcov,licenses"""

[tool.pycodestyle]
exclude = """
docs/conf.py,
setup.py,
__pycache__,build,dist,htmlcov,licenses"""
