[build-system]
requires = ["wheel", "scikit-build-core", "numpy>=1.21", "setuptools_scm[toml]>=6.2"]
build-backend = "scikit_build_core.build"

[project]
name = "pycalc11"
dynamic = ["version"]
authors = [
    {name = "Marten H. van Kerkwijk", email = "mhvk@astro.utoronto.ca"},
    {name = "Chenchong Zhu"},
    {name = "Adam E. Lanman", email = "adam.lanman@mcgill.ca"},
]
license = {text = "MIT"}
description = "Python wrappers for CALC11"
urls = {Homepage = "https://github.com/aelanman/pycalc11"}
requires-python = ">=3.8"
dependencies = ["numpy>=1.21", "astropy>=3.2", "scipy"]

[project.optional-dependencies]
dev = ["pytest", "flake8", "pycodestyle", "jplephem"]

[tool.setuptools_scm]

[project.readme]
file = "README.rst"
content-type = "text/x-rst"

[tool.scikit-build]
ninja.version = ">=1.10"
cmake.version = ">=3.17.2"
metadata.version.provider = "scikit_build_core.metadata.setuptools_scm"
sdist.include = ["pycalc11/_version.py"]
#build-dir = "build/{wheel_tag}"

[tool.pytest.ini_options]
testpaths = ['"pycalc11/tests"']

## [tool.flake8]
## ignore = "W503, N806, E731"
## max-line-length = 100
## # it's recommended to have max-complexity ~ 18
## max-complexity = 30
## select = B,C,E,W,T4,B9,F


[tool.ruff.lint]
select = [
    "E", # pycodestyle
    "W", # pycodestyle warnings
    "F", # Pyflakes
    "D", # pydocstyle
    "UP", # pyupgrade
    "B", # flake8-bugbear
    "A", # flake8-builtins
    "C4", # flake8-comprehensions
    "N", # pep8-naming
    "SIM", # flake8-simplify
]
ignore = [
    "N806", # non-lowercase variable
    "B028", # no-explicit-stacklevel for warnings
    "SIM108", # prefer ternary opperators.
    "SIM118", # don't use "dict.keys()" -- I prefer to keep this explicit
    "D203", # one-blank-line-before-class.
    "D205", # disallows two-line definition lines in docstrings
    "D105", # requiring docstrings in magic methods
    "UP015", # explicit file open parameters
  #  "D212", # multi-line-summary-first-line. We put it on the second line.
]

[tool.ruff.lint.per-file-ignores]
"pycalc11/tests/*" = ["D"] # Don't require docstrings for tests
"pycalc11/utils.py" = ["SIM115"]    # Need to open profiler log  without context for atexit
"pycalc11/interface.py" = ["N805"]  # We need to violate this for the "state_dep" decorator
"pycalc11/__init__.py" = ["D", "E402"]

[tool.ruff.format]
skip-magic-trailing-comma = true

[tool.ruff.lint.pycodestyle]
max-line-length = 100

[tool.ruff.lint.isort]
combine-as-imports = true
known-first-party = ["pycalc11"]
split-on-trailing-comma = false

[tool.ruff.lint.pydocstyle]
convention = "numpy"
