[metadata]
name = calc11
version = 0.1
author = Marten H. van Kerkwijk, Chenchong Zhu
author_email = mhvk@astro.utoronto.ca
license = GNU GPL v3+
license_file = LICENSE
url = https://github.com/mhvk/pycalc11
# project_urls =
#     Documentation = https://pycalc11.readthedocs.io
description = Python wrappers for CALC11
long_description = file: README.rst
long_description_content_type = text/x-rst
edit_on_github = True
github_project = mhvk/pycalc11

[options]
zip_safe = False
packages = find:
python_requires = >=3.8
install_requires =
    numpy>=1.17

[tool:pytest]
testpaths = "calc11"

[flake8]
ignore=
    # missing whitespace around arithmetic operator
    E226,
    # line break before binary operator (have to choose before or after),
    W503
exclude =
    # part of astropy affilliated package template, not our worry.
    baseband/conftest.py,baseband/version.py,baseband/__init__.py,
    baseband/_astropy_init.py,
    docs/conf.py,
    setup.py,
    # standard things to ignore
    __pycache__,build,dist,htmlcov,licenses

[pycodestyle]
exclude =
    # part of astropy affilliated package template, not our worry.
    baseband/conftest.py,baseband/version.py,baseband/__init__.py,
    baseband/_astropy_init.py,
    docs/conf.py,
    setup.py,
    # standard things to ignore
    __pycache__,build,dist,htmlcov,licenses

[build_ext]
inplace=1
