bin_PROGRAMS = difxcalc

AM_CPPFLAGS = -I$(top_builddir)/src

#-fallow-argument-mismatch

AM_FFLAGS = \
	-ffree-form \
	-I$(top_builddir)/src

difxcalc_SOURCES = \
	config.h \
	c2poly.i \
	ccon.i \
	cmwob11.i \
	cmxsr11.i \
	cmxst11.i \
	cmxut11.i \
	cobsn11.i \
	cphys11.i \
	csolsys11.i \
	cuser11.i \
	d_input.i \
	get2s.i \
	input11.i \
	param11.i \
	put2s.i \
	catiu.f \
	catmm.f \
	caxom.f \
	cctiu.f \
	cdiuu.f \
	cdtdb.f \
	cetdm.f \
	cm20u.f \
	cmabd.f \
	cmatu.f \
	cnutm.f \
	cnutu.f \
	cnutu6.f \
	cocem.f \
	cpepu.f \
	cptdm.f \
	crosu.f \
	csitm.f \
	cstrm.f \
	ctheu.f \
	cut1m.f \
	cuvm.f \
	cvecu.f \
	cwobm.f \
	pdrvr.f \
	dinit.f \
	dkill.f \
	dsitu.f \
	strt.f \
	dscan.f \
	fitpoly_.c \
	hardisp.f \
	nfmodel.f \
	nfstrm.f
